--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,11 +239,14 @@ input[type=submit] {
 @media screen and (max-width: 640px) {
   #logo {
     box-sizing: inherit;
-    width: 120%;
+    width: 100%;
   }
   #masthead {
     position: static;
     text-align: center;
+  }
+  .container {
+    width: 100%;
   }
   .container nav {
     width: 100%;
